--- a/package.json
+++ b/package.json
@@ -9,26 +9,20 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@formkit/icons": "^0.17.2",
-    "@formkit/nuxt": "^0.17.2",
-    "@formkit/themes": "^0.17.2",
-    "@nuxt/devtools": "^0.5.5",
-    "@nuxt/image-edge": "^1.0.0-28059208.2abef1b",
-    "@nuxtjs/google-fonts": "^3.0.1",
-    "@nuxtjs/strapi": "^1.9.1",
-    "@nuxtjs/tailwindcss": "^6.7.0",
+    "@formkit/nuxt": "^0.17.3",
+    "@nuxt/devtools": "^0.6.4",
+    "@nuxtjs/tailwindcss": "^6.8.0",
     "@types/node": "^18",
-    "@vueuse/components": "^10.1.2",
-    "@vueuse/core": "^10.1.2",
-    "@vueuse/nuxt": "^10.1.2",
-    "nuxt": "^3.5.1",
-    "nuxt-swiper": "^1.1.0"
+    "@vueuse/nuxt": "^10.2.0",
+    "nuxt": "^3.6.0",
+    "nuxt-icon": "^0.4.1",
+    "typescript": "latest"
   },
   "dependencies": {
-    "@formkit/addons": "^0.17.2",
-    "@formkit/i18n": "^0.17.2",
-    "@vueuse/motion": "^2.0.0",
-    "nuxt-icon": "^0.4.1",
-    "vue-yandex-maps": "^0.12.6"
+    "@formkit/addons": "^0.17.3",
+    "@formkit/i18n": "^0.17.3",
+    "@formkit/icons": "^0.17.3",
+    "@formkit/themes": "^0.17.3",
+    "@vueuse/components": "^10.2.0"
   }
 }
