--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@formkit/nuxt": "^0.17.3",
+    "@formkit/nuxt": "^0.17.4",
     "@nuxt/devtools": "^0.6.4",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@types/node": "^18",
@@ -19,10 +19,11 @@
     "typescript": "latest"
   },
   "dependencies": {
-    "@formkit/addons": "^0.17.3",
-    "@formkit/i18n": "^0.17.3",
-    "@formkit/icons": "^0.17.3",
-    "@formkit/themes": "^0.17.3",
-    "@vueuse/components": "^10.2.0"
+    "@formkit/addons": "^0.17.4",
+    "@formkit/i18n": "^0.17.4",
+    "@formkit/icons": "^0.17.4",
+    "@formkit/themes": "^0.17.4",
+    "@vueuse/components": "^10.2.0",
+    "latest": "^0.2.0"
   }
 }
