--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "latest"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@formkit/addons": "^0.17.4",
     "@formkit/i18n": "^0.17.4",
     "@formkit/icons": "^0.17.4",
