--- a/package.json
+++ b/package.json
@@ -20,12 +20,10 @@
     "typescript": "latest"
   },
   "dependencies": {
-    "@emailjs/browser": "^3.11.0",
     "@formkit/addons": "^0.17.4",
     "@formkit/i18n": "^0.17.4",
     "@formkit/icons": "^0.17.4",
     "@formkit/themes": "^0.17.4",
-    "@vueuse/components": "^10.2.1",
-    "latest": "^0.2.0"
+    "@vueuse/components": "^10.2.1"
   }
 }
